--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 OPENAI_API_KEY=
 SERVICE_NAME=pshotels
-SEARCH_ADMIN_KEY=34ZEB9vPTPQc5cl2YgAgEkFmRTVPkjLpD3S3Ry3nIjAzSeANrYzd
+SEARCH_ADMIN_KEY=
 SEARCH_INDEX_NAME=hotel-reviews-index
